fixed horizontal scrolling on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -121,11 +121,14 @@ header {
 
 @media (max-width: 670px) {
   .prof-pic {
-    margin-top: 20px !;
+    margin-top: 20px !important;
+    max-width: 70% !important;
   }
   .content-container {
     padding: 30px 0px;
   }
+}
+@media (max-width: 500px) {
 }
 
 .custom-card {
@@ -221,6 +224,12 @@ h5 {
   .flowers-container {
     display: none;
   }
+  #navbarTogglerDemo03 > ul > li {
+    max-width: fit-content !important;
+  }
+  #navbarTogglerDemo03 > ul {
+    max-width: fit-content !important;
+  }
 }
 
 footer {
@@ -245,6 +254,18 @@ footer .email-link {
 footer .email-link:hover {
   color: var(--primary-color);
 }
+
+@media (max-width: 650px) {
+  footer .email-link {
+    display: none;
+  }
+
+  footer p {
+    font-size: 14px !important;
+    padding: 0 15px;
+  }
+}
+
 .social-links {
   margin-top: 30px;
 }
